<resources>
    <string name="app_name">EmojiApp</string>

    <!-- region main -->
    <string name="main_random_emoji">Random emoji</string>
    <string name="main_emoji_list">Emoji list</string>
    <string name="main_hint_search_emoji">Search for emoji</string>
    <string name="main_avatar_list">Avatar list</string>
    <string name="main_google_repos">Google Repos</string>
    <!-- endregion main -->
</resources>